Aligned template images and fixed flexbox display

--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,12 @@
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
     }
     .featured{
       margin: 10px;
       display: inline-block;
-      width: 30%;
-      min-width: 300px;
+      max-width: 300px;
     }
     .portfolio-image{
       width: 100%;
